force-app/main/default/objects/Credit_Note__c/Credit_Note__c.object-meta.xml
<CustomObject>
    <description>DEMO mirror of SAP credit notes so the Customer 360 shows finance history. SAP stays the system of record.</description>
    <label>Credit Note</label>
    <nameField>
        <displayFormat>CN-{00000}</displayFormat>
        <label>Credit Note Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>