force-app/main/default/objects/Credit_Note__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quality Complaint</fullName>
            </value>
            <value>
                <fullName>Short Shipment</fullName>
            </value>
            <value>
                <fullName>Price Adjustment</fullName>
            </value>
            <value>
                <fullName>Returned Goods</fullName>
            </value>
            <value>
                <fullName>Damaged in Transit</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>