force-app/main/default/objects/Credit_Note__c/fields/SAP_Reference__c.field-meta.xml
<CustomField>
    <fullName>SAP_Reference__c</fullName>
    <label>SAP Reference</label>
    <length>40</length>
    <type>Text</type>
</CustomField>