force-app/main/default/objects/Credit_Note__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Invoice__c</columns>
    <columns>Case__c</columns>
    <columns>Credit_Date__c</columns>
    <columns>Amount__c</columns>
    <columns>Reason__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Credit Notes</label>
</ListView>